Added document type choice

--- a/pdf/static/html/pdf_edit.html
+++ b/pdf/static/html/pdf_edit.html
@@ -45,6 +45,19 @@
             <span class="tip setting-help" >Display a download button for this PDF.</span >
         </li >
 
+        <li class="field comp-setting-entry is-set" id="alt_text_item" >
+            <div class="wrapper-comp-setting" >
+                <label class="label setting-label" for="edit_document_type" >Document type</label >
+                <input name="document_type" class="input setting-input edit-document-type radio" value="data"
+                       type="radio" checked="{{ document_type_doc }}">
+                <label class="document-type-label" for="data">Data</label>
+                <input name="document_type" class="input setting-input edit-document-type radio" value="doc"
+                       type="radio" checked="{{ document_type_doc }}">
+                <label class="document-type-label" for="doc">Doc</label>
+            </div >
+            <span class="tip setting-help" >Tip!!!!!!!!!!.</span >
+        </li >
+
     </ul >
 
     <div class="xblock-actions" >
