Fixed checked attribute for radio buttons to match xblock state

--- a/pdf/static/html/pdf_edit.html
+++ b/pdf/static/html/pdf_edit.html
@@ -49,10 +49,14 @@
             <div class="wrapper-comp-setting" >
                 <label class="label setting-label" for="edit_document_type" >The media should be labeled as...</label >
                 <input name="document_type" class="input setting-input edit-document-type radio" value="data"
-                       type="radio" checked="{{ document_type_doc }}">
+                       type="radio" {% if not document_type_doc %}
+                                    checked
+                                    {% endif %}>
                 <label class="document-type-label" for="data">Data</label>
                 <input name="document_type" class="input setting-input edit-document-type radio" value="doc"
-                       type="radio" checked="{{ document_type_doc }}">
+                       type="radio" {% if document_type_doc %}
+                                    checked
+                                    {% endif %}">
                 <label class="document-type-label" for="doc">Document</label>
             </div >
         </li >
